--- a/_config.yml
+++ b/_config.yml
@@ -15,10 +15,10 @@ keywords: ityouknow,纯洁的微笑,Spring,Spring Boot,Spring Cloud,MongoDB,Jvm,
 encoding: "utf-8"
 favicon: favicon.ico 
 
-repository: ityouknow/ityouknow.github.io
-github_url: https://github.com/ityouknow
-url: http://www.ityouknow.com
-enforce_ssl: ityouknow.com
+repository: huang627833208/huang627833208.github.io
+github_url: https://github.com/huang627833208
+url: https://huang627833208.github.io
+enforce_ssl: huang627833208.com
 
 ## Gem
 plugins:
